<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" 
	android:background="@drawable/temp"
	android:gravity="center_horizontal" >	
    <TextView  
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/site_url"
	    android:padding="10dip"
	/>
    <EditText
    	android:id="@+id/url_text"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content" 
	    android:lines="1"
		android:inputType="textUri"
		android:imeOptions="actionNext"
		android:hint="@string/url_hint"	
	/>
	<TextView  
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/site_username"
	    android:padding="10dip"
	/>
    <EditText
    	android:id="@+id/url_username"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content" 
	    android:lines="1"
		android:inputType="textUri"
		android:imeOptions="actionNext"
		android:hint="@string/username_hint"	
	/>
	<TextView  
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/enter_pass"
	    android:padding="10dip"
	/>
    <EditText
    	android:id="@+id/url_password"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content" 
	    android:lines="1"
		android:inputType="textUri"
		android:imeOptions="actionNext"
		android:hint="@string/password"	
	/>
    <LinearLayout
	android:orientation="horizontal"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:gravity="center" >
		<Button 
			android:id="@+id/add_button"
			android:layout_width="100dp"
			android:layout_height="60dp"
			android:text="@string/add_button"
			android:padding="10dip"
			android:onClick="onAddClick" 
		/>
		<Button 
			android:id="@+id/gen_button"
			android:layout_width="100dp"
			android:layout_height="60dp"
			android:text="@string/gen_pwd"
			android:padding="10dip"
			android:onClick="genPassword"
		/>
		<Button 
			android:id="@+id/clr_button"
			android:layout_width="100dp"
			android:layout_height="60dp"
			android:text="@string/clear_button"
			android:padding="10dip"
			android:onClick="clearAll"
		/>
	</LinearLayout>
</LinearLayout>
	