<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:background="@drawable/temp"
    android:paddingTop="50dip"
    >
	    <LinearLayout
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:background="@drawable/opacy"
	    >
		<TextView  
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 
		    android:text="@string/enterstring"
		    android:padding="10dip"
		    android:gravity="center"
		    android:textStyle="bold"
		    android:textSize="30dp"
		/>
	    <EditText
	    	android:id="@+id/login_password1"
	    	android:layout_width="400dp"
	    	android:layout_height="wrap_content" 
		    android:lines="1"
			android:inputType="textPassword"
			android:imeOptions="actionGo"
			android:hint="@string/password"	
		/>
	    <LinearLayout android:layout_width="fill_parent" android:orientation="horizontal" android:padding="10dip" android:gravity="center" android:layout_height="wrap_content">
	        <Button android:text="@string/login_button" android:id="@+id/login_button" android:layout_width="100dp" android:layout_height="60dp"></Button>
	        <Button android:text="@string/about_button" android:id="@+id/about_button" android:layout_width="100dp" android:layout_height="60dp"></Button>
	        <Button android:text="@string/display_button" android:id="@+id/display_button" android:layout_width="100dp" android:layout_height="60dp"></Button>
	    </LinearLayout>
	</LinearLayout>
</LinearLayout>