<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" 
	android:background="@drawable/temp"
	android:gravity="center_horizontal" >	
    <TextView  
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
	    android:padding="10dip"
		android:text="@string/min_length"/>
    <EditText
    	android:id="@+id/min_text"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content" 
	    android:lines="1"
		android:inputType="number|text"
		android:imeOptions="actionNext"/>
	<TextView  
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
	    android:padding="10dip"
	android:text="@string/max_length"/>
    <EditText
    	android:id="@+id/max_text"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content" 
	    android:lines="1"
		android:inputType="number|text"
		android:imeOptions="actionNext"/>
	<TextView  
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
	    android:padding="10dip"
		android:text="@string/pass2_convert"/>
    <EditText
    	android:id="@+id/gen_pass"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content" 
	    android:lines="1"
		android:inputType="textUri"
		android:imeOptions="actionNext"/>
    <LinearLayout 
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent" 
		android:gravity="center_horizontal" >
		<Button 
			android:id="@+id/generate_button"
			android:layout_width="100dp"
			android:layout_height="60dp"
			android:padding="10dip"
			android:text="@string/generate"
			android:onClick="genPassword"/>
		<Button 
			android:id="@+id/clear_button"
			android:layout_width="100dp"
			android:layout_height="60dp"
			android:padding="10dip"
			android:text="@string/clear_button"
			android:onClick="clearButtonClicked"/>
	</LinearLayout>
</LinearLayout>
